5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1602_1017.log
== TEST (2019-03-25 18:57:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
R = 6371.01
print(roun(d, 2))
-- ERROR:
File "XXXX", line 9
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:58:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 − long2))
R = 6371.01
print(roun(d, 2))
-- ERROR:
File "XXXX", line 9
    d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 − long2))
                                                                           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:59:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 − long2))
R = 6371.01
print(roun(d, 2))
-- ERROR:
File "XXXX", line 9
    d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 − long2))
                                                                           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:59:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
R = 6371.01
print(roun(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:00:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
R = 6371.01
print(roun(d, 2))
-- EXECUTION TIME:
0.218911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 9, in <module>
    d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
NameError: name 'R' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(roun(d, 2))
-- EXECUTION TIME:
0.179792
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 11, in <module>
    print(roun(d, 2))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(roun(d, 2))
-- EXECUTION TIME:
0.144866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 11, in <module>
    print(roun(d, 2))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(roun(d, 2))
-- EXECUTION TIME:
0.184858
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 11, in <module>
    print(roun(d, 2))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(roun(d, 2))
-- EXECUTION TIME:
0.0983799
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1602/1017/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(roun(d, 2))
-- EXECUTION TIME:
0.142824
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 11, in <module>
    print(roun(d, 2))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(roun(d, 2))
-- EXECUTION TIME:
0.098963
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1602/1017/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(roun(d, 2))
-- EXECUTION TIME:
0.174634
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 11, in <module>
    print(roun(d, 2))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(roun(d, 2))
-- EXECUTION TIME:
0.110371
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1602/1017/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:01:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(roun(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(roun(d, 2))
NameError: name 'roun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(round(d, 2))
-- EXECUTION TIME:
0.16876
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:23:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("Latitude de P1: ")))
lat2 = radians(float(input("Latitude de P2: ")))
long2 = radians(float(input("Latitude de P2: ")))
R = 6371.01
d = R * acos(sin(lat1) * sin(lat2) + cos(lat1) * cos(lat2) * cos(long1 - long2))
print(round(d, 2))
-- EXECUTION TIME:
0.210152
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
